# internal/handler/user/create_user_handler.go
@@ -1,28 +1,0 @@
-package user
-
-import (
-	"net/http"
-
-	"github.com/colinrs/prompthub/internal/logic/user"
-	"github.com/colinrs/prompthub/internal/svc"
-	"github.com/colinrs/prompthub/internal/types"
-	"github.com/zeromicro/go-zero/rest/httpx"
-)
-
-func CreateUserHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
-	return func(w http.ResponseWriter, r *http.Request) {
-		var req types.CreateUserRequest
-		if err := httpx.Parse(r, &req); err != nil {
-			httpx.ErrorCtx(r.Context(), w, err)
-			return
-		}
-
-		l := user.NewCreateUserLogic(r.Context(), svcCtx)
-		err := l.CreateUser(&req)
-		if err != nil {
-			httpx.ErrorCtx(r.Context(), w, err)
-		} else {
-			httpx.Ok(w)
-		}
-	}
-}
