# internal/handler/user/register_user_handler.go
@@ -1,0 +1,28 @@
+package user
+
+import (
+	"net/http"
+
+	"github.com/colinrs/prompthub/internal/logic/user"
+	"github.com/colinrs/prompthub/internal/svc"
+	"github.com/colinrs/prompthub/internal/types"
+	"github.com/colinrs/prompthub/pkg/httpy"
+	"github.com/zeromicro/go-zero/rest/httpx"
+)
+
+func RegisterUserHandler(svcCtx *svc.ServiceContext) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var req types.RegisterUserRequest
+		if err := httpy.Parse(r, &req); err != nil {
+			httpx.ErrorCtx(r.Context(), w, err)
+			return
+		}
+		l := user.NewRegisterUserLogic(r.Context(), svcCtx)
+		resp, err := l.RegisterUser(&req)
+		resp.UserId = 1
+		resp.Name = "qqq"
+		resp.Email = "yichuan.denf@qq.com"
+		resp.Token = "token"
+		httpy.ResultCtx(r, w, resp, err)
+	}
+}
